Adding content for Specialities

--- a/adoa/index.html
+++ b/adoa/index.html
@@ -65,9 +65,8 @@
                     	<img class="icon" src="images/icons/icon-features-1.png" />
                     </div>
                     <div class="col-right">
-                    	<h2 class="title">Branding</h2>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+                    	<h2 class="title">Software Development</h2>
+                        <p>Adoa aims to help partners on their outsourcing plans for part of their development, this may involve design, coding, testing, maintenanining, or all of these aspects as complete solution for your software development needs.</p>
                     </div>
                  </section>
 
@@ -76,9 +75,8 @@
                     	<img class="icon" src="images/icons/icon-features-2.png" />
                     </div>
                     <div class="col-right">
-                    	<h2 class="title">Development</h2>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+                    	<h2 class="title">Project Management</h2>
+                        <p>You can entrust whole project as partner of us to be handled by our development team while you are assured with quality of end product by being always in touch with your dedicated project manager who will respond all your needs all the time.</p>
                     </div>
                  </section>
 
@@ -87,10 +85,8 @@
                     	<img class="icon" src="images/icons/icon-features-3.png" />
                     </div>
                     <div class="col-right">
-                    	<h2 class="title">Consulting</h2>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
-
+                    	<h2 class="title">Collaboration</h2>
+                        <p>Adoa is based on principals that strongly enforces collaboration between developers and partners to maximize value for both sides.</p>
                     </div>
                  </section>
 
@@ -99,9 +95,8 @@
                     	<img class="icon" src="images/icons/icon-features-1.png" />
                     </div>
                     <div class="col-right">
-                    	<h2 class="title">Branding</h2>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+                    	<h2 class="title">Glocalization</h2>
+                        <p>There is always limit to your potential business opportunities in your domestic market; unless you would like to take step outside of your domain and compete globally. Adoa because of its structure can help your business to achieve localization in your desired part of the globe.</p>
                     </div>
                  </section>
 
@@ -110,9 +105,8 @@
                     	<img class="icon" src="images/icons/icon-features-2.png" />
                     </div>
                     <div class="col-right">
-                    	<h2 class="title">Development</h2>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+                    	<h2 class="title">Idea Creation</h2>
+												<p>As a platform where developers encouraged to present their ideas and seek for other developer's help, you might be suprised how many creative ideas you will bump into.</p>
                     </div>
                  </section>
 
@@ -121,10 +115,8 @@
                     	<img class="icon" src="images/icons/icon-features-3.png" />
                     </div>
                     <div class="col-right">
-                    	<h2 class="title">Consulting</h2>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
-
+                    	<h2 class="title">IT Solutions</h2>
+												<p>Taking challenging problems that is related to your business and providing them IT solutions as tools is how Adoa aims to support our partners.</p>
                     </div>
                  </section>
                 <!--
@@ -172,7 +164,7 @@
                                         <div class="mouse-over bg-none">
                                           <div class="content">
                                             <div class="text">
-                                              <h2> COLLECT <span class="ad_main-color"> CLIENTS NEEDS </span> </h2>
+                                              <h2> COLLECT <span class="ad_main-color"> PARTNER NEEDS </span> </h2>
                                               <p> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using.. </p>
                                             </div>
                                           </div>
